force-app/main/Government_Documents/Permit_And_Licensing/objects/Nuvi_Permit_Status_Change__e/Nuvi_Permit_Status_Change__e.object-meta.xml
<CustomObject>
    <label>Nuvi Permit Status Change</label>
    <pluralLabel>Nuvi Permit Status Changes</pluralLabel>
</CustomObject>