force-app/main/Government_Documents/Permit_And_Licensing/objects/Nuvi_Permit_Status_Change__e/fields/ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationId__c</fullName>
<label>Application Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>