force-app/main/Government_Documents/Permit_And_Licensing/objects/Nuvi_Permit_Status_Change__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>