force-app/main/Government_Documents/Permit_And_Licensing/objects/Nuvi_Permit_Status_Change__e/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>